--- a/install_java.yml
+++ b/install_java.yml
@@ -1,15 +1,23 @@
 ---
 - hosts: all
+  vars:
+    download_url: http://download.oracle.com/otn-pub/java/jdk/8u5-b13/jdk-8u5-linux-x64.tar.gz
+    download_folder: /opt
+    java_name: "{{download_folder}}/jdk1.8.0_05"
+    java_archive: "{{download_folder}}/jdk-8u5-linux-x64.tar.gz"
 
   tasks:
-   - name: add repo for java 8
-      apt_repository: repo='ppa:webupd8team/java' state=present
+  - name: Download Java
+    command: "wget -q -O {{java_archive}} --no-check-certificate --no-cookies --header 'Cookie: oraclelicense=accept-securebackup-cookie' {{download_url}} creates={{java_archive}}"
 
-    - name: set licence selected
-      shell: /bin/echo debconf shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections
+  - name: Unpack archive
+    command: "tar -zxf {{java_archive}} -C {{download_folder}} creates={{java_name}}"
 
-    - name: set licence seen
-      shell: /bin/echo debconf shared/accepted-oracle-license-v1-1 seen true | /usr/bin/debconf-set-selections
+  - name: Fix ownership
+    file: state=directory path={{java_name}} owner=root group=root recurse=yes
 
-    - name: install java 8
-      apt: name=oracle-java8-installer state=latest update-cache=yes force=yes
+  - name: Make Java available for system
+    command: 'alternatives --install "/usr/bin/java" "java" "{{java_name}}/bin/java" 2000'
+
+  - name: Clean up
+    file: state=absent path={{java_archive}}
