--- a/install_java.yml
+++ b/install_java.yml
@@ -1,23 +1,23 @@
 ---
 - hosts: all
-  vars:
-    download_url: http://download.oracle.com/otn-pub/java/jdk/8u5-b13/jdk-8u5-linux-x64.tar.gz
-    download_folder: /opt
-    java_name: "{{download_folder}}/jdk1.8.0_05"
-    java_archive: "{{download_folder}}/jdk-8u5-linux-x64.tar.gz"
 
   tasks:
-  - name: Download Java
-    command: "wget -q -O {{java_archive}} --no-check-certificate --no-cookies --header 'Cookie: oraclelicense=accept-securebackup-cookie' {{download_url}} creates={{java_archive}}"
+- name: Install add-apt-repostory
+  become: yes
+  apt: name=software-properties-common state=latest
 
-  - name: Unpack archive
-    command: "tar -zxf {{java_archive}} -C {{download_folder}} creates={{java_name}}"
+- name: Add Oracle Java Repository
+  become: yes
+  apt_repository: repo='ppa:webupd8team/java'
 
-  - name: Fix ownership
-    file: state=directory path={{java_name}} owner=root group=root recurse=yes
+- name: Accept Java 8 License
+  become: yes
+  debconf: name='oracle-java8-installer' question='shared/accepted-oracle-license-v1-1' value='true' vtype='select'
 
-  - name: Make Java available for system
-    command: 'alternatives --install "/usr/bin/java" "java" "{{java_name}}/bin/java" 2000'
-
-  - name: Clean up
-    file: state=absent path={{java_archive}}
+- name: Install Oracle Java 8
+  become: yes
+  apt: name={{item}} state=latest
+  with_items:
+    - oracle-java8-installer
+    - ca-certificates
+    - oracle-java8-set-default
