--- a/install_java.yml
+++ b/install_java.yml
@@ -2,22 +2,23 @@
 - hosts: all
 
   tasks:
-- name: Install add-apt-repostory
-  become: yes
-  apt: name=software-properties-common state=latest
-
-- name: Add Oracle Java Repository
-  become: yes
-  apt_repository: repo='ppa:webupd8team/java'
-
-- name: Accept Java 8 License
-  become: yes
-  debconf: name='oracle-java8-installer' question='shared/accepted-oracle-license-v1-1' value='true' vtype='select'
-
-- name: Install Oracle Java 8
-  become: yes
-  apt: name={{item}} state=latest
-  with_items:
-    - oracle-java8-installer
-    - ca-certificates
-    - oracle-java8-set-default
+  - name: install the java pre-requisties
+    apt:
+      name: software-properties-common 
+      state: latest
+  - name: add oracle java repository
+    apt_repository:
+         repo: 'ppa:webupd8team/java'
+  - name: update repository
+    apt: 
+      update_cache: yes
+  - name: Accept Java 8 License
+    debconf:
+     name: 'oracle-java8-installer' 
+     question: 'shared/accepted-oracle-license-v1-1' 
+     value: true 
+     vtype: 'select'
+  - name: install java 8
+    apt: 
+     name: oracle-java8-installer 
+     force: yes
