--- a/install_java.yml
+++ b/install_java.yml
@@ -4,8 +4,9 @@
   tasks:
   - name: Download Java JRE
     get_url:
-      url: http://download.oracle.com/otn-pub/java/jdk/8u60-b27/jre-8u60-linux-x64.rpm
+      url: http://download.oracle.com/otn-pub/java/jdk/7u79-b15/jdk-7u79-linux-x64.rpm
       dest: /opt/jre-8u60-linux-x64.rpm
+      headers: 'Cookie: oraclelicense=accept-securebackup-cookie'
   - name: install Java JRE rpm from a local file
     yum:
       name: /opt/jre-8u60-linux-x64.rpm
@@ -14,6 +15,7 @@
     get_url:
       url: http://download.oracle.com/otn-pub/java/jdk/8u60-b27/jdk-8u60-linux-x64.rpm
       dest: /opt/jdk-8u60-linux-x64.rpm
+      headers: 'Cookie: oraclelicense=accept-securebackup-cookie'
   - name: Install Java JDK rpm from a local file
     yum:
       name: /opt/jdk-8u60-linux-x64.rpm
