--- a/install_java.yml
+++ b/install_java.yml
@@ -2,21 +2,8 @@
 - hosts: all
 
   tasks:
-  - name: Download Java JRE
-    get_url:
-      url: http://download.oracle.com/otn-pub/java/jdk/7u79-b15/jdk-7u79-linux-x64.rpm
-      dest: /opt/jre-8u60-linux-x64.rpm
-      headers: 'Cookie: oraclelicense=accept-securebackup-cookie'
-  - name: install Java JRE rpm from a local file
+  - name: Install Java 8 using YUM.
     yum:
-      name: /opt/jre-8u60-linux-x64.rpm
-      state: present
-  - name: Download Java JDK
-    get_url:
-      url: http://download.oracle.com/otn-pub/java/jdk/8u60-b27/jdk-8u60-linux-x64.rpm
-      dest: /opt/jdk-8u60-linux-x64.rpm
-      headers: 'Cookie: oraclelicense=accept-securebackup-cookie'
-  - name: Install Java JDK rpm from a local file
-    yum:
-      name: /opt/jdk-8u60-linux-x64.rpm
-      state: present
+      name: "java-1.8.0-openjdk"
+      state: latest  
+    become: true
