--- a/start_app.yml
+++ b/start_app.yml
@@ -3,10 +3,8 @@
 
   tasks:
   - name: Start Spring Pet Clinic
-    shell: "./mvnw package"
-    args:
-      chdir: "/var/www/springpetclinic"
+    shell: “./mvnw package”
   - name: Start Spring Pet Clinic
-    shell: "java -jar target/*.jar"
+    shell: “java -jar target/*.jar”
     args:
-      chdir: "/var/www/springpetclinic"
+      chdir: “/var/www/springpetclinic”
