--- a/install-maven-cmd.yml
+++ b/install-maven-cmd.yml
@@ -10,8 +10,8 @@
     shell: “touch /etc/profile.d/maven.sh”
   - name: Configure Maven
     blockinfile:
-      dest:/etc/profile.d/maven.sh
-      block:
+      path: /etc/profile.d/maven.sh
+      block: |
         # Apache Maven Environmental Variables
         # MAVEN_HOME for Maven 1 - M2_HOME for Maven 2
         export JAVA_HOME=/usr/lib/jvm/jre-openjdk
