--- a/install_maven.yml
+++ b/install_maven.yml
@@ -7,3 +7,21 @@
       name: "maven"
       state: latest  
     become: true
+  - name: Maven Config File
+    shell: “touch /etc/profile.d/maven.sh”
+  - name: Configure Maven
+    blockinfile:
+      path: /etc/profile.d/maven.sh
+      block: |
+        # Apache Maven Environmental Variables
+        # MAVEN_HOME for Maven 1 - M2_HOME for Maven 2
+        export JAVA_HOME=/usr/lib/jvm/jre-openjdk
+        export M2_HOME=/opt/maven
+        export MAVEN_HOME=/opt/maven
+        export PATH=${M2_HOME}/bin:${PATH}
+   - name: Change Mode sh file
+     shell: “chmod +x /etc/profile.d/maven.sh”
+   - name: Source sh file
+     shell: “source /etc/profile.d/maven.sh”
+   - name: Source sh file
+     shell: “mvn --version”  
