--- a/install_maven.yml
+++ b/install_maven.yml
@@ -17,6 +17,10 @@
         export M2_HOME=/opt/maven
         export MAVEN_HOME=/opt/maven
         export PATH=${M2_HOME}/bin:${PATH}
+  - name: Touch a file
+    file:
+      path: /etc/profile.d/maven.sh
+      state: touch
   - name: Change Mode sh file
     shell: “chmod +x /etc/profile.d/maven.sh”
   - name: Source sh file
