--- a/install_maven.yml
+++ b/install_maven.yml
@@ -7,6 +7,7 @@
       name: "maven"
       state: latest  
     become: true
-
-
-mvn -N io.takari:maven:wrapper
+  - name: Maven wrapper
+    command: mvn -N io.takari:maven:wrapper
+    args:
+      chdir: /var/www/springpetclinic
