--- a/start_app.yml
+++ b/start_app.yml
@@ -3,4 +3,10 @@
 
   tasks:
   - name: Start Spring Pet Clinic
-    shell: "/var/www/springpetclinc/mvnw package"
+    command: ./mvnw package
+    args:
+      chdir: /var/www/springpetclinc/
+  - name: Start Spring Pet Clinic
+    command: java -jar target/*.jar
+    args:
+      chdir: /var/www/springpetclinc/
