--- a/start_app.yml
+++ b/start_app.yml
@@ -2,11 +2,11 @@
 - hosts: all
 
   tasks:
-  - name: Start Spring Pet Clinic
+  - name: Start Spring Pet Clinic Mvnw
     command: ./mvnw package
     args:
       chdir: /var/www/springpetclinc/
-  - name: Start Spring Pet Clinic
+  - name: Start Spring Pet Clinic Java
     command: java -jar spring-petclinic-2.3.1.BUILD-SNAPSHOT.jar
     args:
       chdir: /var/www/springpetclinc/target
