--- a/start_app.yml
+++ b/start_app.yml
@@ -7,6 +7,6 @@
     args:
       chdir: /var/www/springpetclinc/
   - name: Start Spring Pet Clinic Java
-    command: java -jar spring-petclinic-2.3.1.BUILD-SNAPSHOT.jar
+    command: nohup java -jar spring-petclinic-2.3.1.BUILD-SNAPSHOT.jar &
     args:
       chdir: /var/www/springpetclinc/target
